# keepdir

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  electron-builder.yml  eslint.config.mjs  forge.config.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: build.yml  tauri-release-test.yml
assets/: icon.icns  tray-pending.rgba
docs/superpowers/plans/: 2026-06-03-watch-folders-rename-suggestions.md
docs/superpowers/specs/: 2026-06-03-watch-folders-rename-suggestions-design.md
scripts/: package-windows-portable.ps1  runtime-smoke.ps1
src/: setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/main/: analysisService.js  database.js  fileOperations.js  importValidation.js  ipcValidation.js  jsonExtraction.js  main.js  preload.js  stateValidation.js  suggestionValidation.js  updater.js  watchFolderManager.js  watchFolderValidation.js
src/main/__tests__/: analysisService.test.js  databaseContracts.test.js  databaseParsing.test.js  fileOperations.test.js  importValidation.test.js  ipcValidation.test.js  jsonExtraction.test.js  providerValidationTimeouts.test.js  stateValidation.test.js  suggestionValidation.test.js  updater.test.js  watchFolderManager.test.js  watchFolderValidation.test.js  watchedRenameDatabase.test.js
src/renderer/: App.tsx  appApi.ts  electron.d.ts  index.html  index.tsx  styles.css  tauriBridge.ts  updateCheck.ts  utils.ts
tests/e2e/: electron-smoke.spec.ts
(+94 files in other folders)
