[package]
name = "keepdir"
version = "1.0.5"
description = "KeepDir"
authors = ["oshtz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.4.1"
tauri-plugin-notification = "2.3.3"
